Shield focus buttons no longer activate in pairs, added power level display & corrected alignment of top of shield display

--- a/Crew UI/game/Shields/_shields.scss
+++ b/Crew UI/game/Shields/_shields.scss
@@ -4,6 +4,9 @@
 
 #shields {
     @include adaptive-layout(xl);
+    .powerLevel {
+        float: right;
+    }
 
     > section:first-child {
         @include nopad();
